# target-yaml

./: .gitignore  README.md  meltano.yml  pyproject.toml  target-yaml.sh
target_yaml/: sinks.py  target.py
target_yaml/tests/: __init__.py  test_core.py
